fixed alignment of buttons

--- a/src/style.css
+++ b/src/style.css
@@ -34,32 +34,32 @@ nav {
     font-size: 30px;
     text-align: center;
     font-weight: 100;
-    grid-gap: 5px;
+    grid-gap: 10px;
+    color: rgb(99, 87, 87);
 }
 
 .grid {
     display: grid;
     grid-template-columns: 200px 200px 200px;
-    grid-auto-flow: column;
 }
 
 .link1 {
     grid-column: 1/span 1;
-    padding: 10px;
+    height: 70px;
     margin: 5px;
     border: 2px black solid;
 }
 
 .link2 {
     grid-column: 2/span 1;
-    padding: 10px;
+    height: 70px;
     margin: 5px;
     border: 2px black solid;
 }
 
 .link3 {
     grid-column: 3/ span 1;
-    padding: 10px;
+    height: 70px;
     margin: 5px;
     border: 2px black solid;
 }
